# magnum-resource-loading-crash-demo

./: CMakeLists.txt  LICENSE  README.md
include/: library.hpp
src/: library.cpp  main.cpp
